30/08/2023
-fixed several other int/float issues in pyqt calls (pyqt all of a sudden became unfriendly when floats are passed in place of ints...)

29/08/2023
-started moving the soft to python 3.10.12 (default ubuntu and colab version)

28/08/2023
-replaced 'Help' qtwebengine with a series of html/web links. Qtwebengine was a major cause of crash; also there is no need to have this within the tool rather than online...
-removed the qtwebengine from setup.pys

28/06/2023
-started to annotate the code using chatGPT (few errors, or incomplete documentation, may have been generated by the model as I haven't carefully reviewed everything the model did; globally, however, the code is now better annotated and easier to use by external users.
-started adding docstring tests for classes and methods (very elegant way to maintain, test and annotate code at the same time)
-started building a doc for the tool
-started cleaning the code and removing useless methods

16/06/2023
-started cleaning and annotating the code
-started adding tests for the main functions

07/09/2022
-fixed opening of czi files so that they are opened as channel last, which is what epyseg and pyta expect (this was not the case and since all my czi test files were single channels I missed the bug)

05/07/2022
-added the new augmenter (hope I didn't break anything, so far everything seems to be ok). The big advantage is that one can pass any function to this and also chains of functions/augmentation (e.g. invert, flip, elastic, rotate,.... all one after the other) to the augmenter (so far only available through code so far).

04/07/2022
-changed the data augmenter to use random and seeds to be in sync between orig and GT instead of passing arguments used between one another --> this is more pythonic and code is more elegant, even though some methods needed be modified and one needs to always ensure the same number of random calls is made to keep everything in sync.